--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
     "cloudinary": "^2.4.0",
-    "mongoose": "^8.5.2"
+    "express": "^4.18.2",
+    "express-rate-limit": "^8.0.1",
+    "helmet": "^8.1.0",
+    "mongoose": "^8.5.2",
+    "multer": "^1.4.5-lts.1",
+    "express-basic-auth": "^1.2.1"  // Thêm để xác thực
   }
 }
