--- a/.env
+++ b/.env
@@ -3,5 +3,6 @@ CLOUDINARY_API_KEY=873619512814747
 CLOUDINARY_API_SECRET=rB_22V5IhLYLOOs3QBwwwBtFnfQ
 CLOUDINARY_UPLOAD_PRESET=share-media-upload
 MONGODB_URI=mongodb+srv://Ducsigmatoilet:FHQS8KcJhRA#8$H@cluster0.lffn4vf.mongodb.net/share-media?retryWrites=true&w=majority&appName=Cluster0
-ADMIN_USER=Hahaconcacbuchaba09
-ADMIN_PASS=duckdzz
+ADMIN_USER=duckdzz
+ADMIN_PASS=Hahaconcacbuchaba09
+JWT_SECRET=42672819151
