--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "share-media",
   "version": "1.0.0",
-  "description": "Chia sẻ ảnh và video",
+  "description": "Ứng dụng chia sẻ ảnh và video với upload và quản lý admin",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
-    "basic-auth": "^2.0.1",
-    "cloudinary": "^2.4.0",
-    "cookie-parser": "^1.4.7",
+    "cloudinary": "^1.37.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.5.2",
+    "helmet": "^6.0.1",
+    "mongodb": "^5.1.0",
     "multer": "^1.4.5-lts.1"
   }
 }
